Fixing spacing.

--- a/projects.css
+++ b/projects.css
@@ -39,7 +39,8 @@ p {
 }
 #nights-caption {
     color: gray;
-    margin-left:30%;
+    width: 40%;
+    margin: auto;
 }
 #links {
     font-size: 20px;
